--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apskaita</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/blokai.css">
+
 </head>
 <body>
-    
+    <header class="container header">
+        <img class="favicon" src="#" alt="favicon">
+        <a class="button1" href="#">Pasirinkimas 1</a>
+        <a class="button1" href="#">Pasirinkimas 2</a>
+        <a class="button1" href="#">Pasirinkimas 3</a>
+        <a class="button1" href="#">Pasirinkimas 4</a>
+        <a class="button1" href="#">Pasirinkimas 5</a>
+    </header>
+    <div class="container spacer"></div>
+    <main class="container">
+        <div class="menu">
+            <a class="button2" href="#">Setting 1</a>
+            <a class="button2" href="#">Setting 2</a>
+            <a class="button2" href="#">Setting 3</a>
+            <a class="button2" href="#">Setting 4</a>
+        </div>
+        <div class="blokas">
+            <img class="foto" src="./assets/list.jpeg" alt="Kolkas img, veliau bus content">
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
