--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="button2" href="#">Setting 4</a>
         </div>
         <div class="blokas">
-            <img class="foto" src="./assets/list.jpeg" alt="Kolkas img, veliau bus content">
+            <img class="foto" src=" " alt="Kolkas img, veliau bus content">
         </div>
     </main>
     <footer></footer>
